[HMJ-10] Fix server, add docker

--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -1,4 +1,10 @@
-auth:
-  jwt_token_secret: ""
-  auth_token_expiry_minutes: ""
-  refresh_token_expiry_minutes: ""
+# gRPC
+grpc:
+  port: ""
+  network: ""
+
+# HTTP
+http:
+  port: ""
+  host: ""
+  gracefulTimeout: ""
