--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,4 +1,12 @@
-auth:
-  jwt_token_secret: "UT+rnoHKMN9eZMhJHgDZQg=="
-  auth_token_expiry_minutes: "1h0m"
-  refresh_token_expiry_minutes: "1h0m"
+# gRPC
+grpc:
+  port: ":8081"
+  network: "tcp"
+
+# HTTP
+http:
+  port: ":8082"
+  host: "localhost"
+  graceful_timeout: "5s"
+
+
