[HMJ-12] Add docker and logger

--- a/config/default_config.yaml
+++ b/config/default_config.yaml
@@ -1,3 +1,15 @@
+# Postgresql db
+database:
+  name: ""
+  user: ""
+  password: ""
+  host: ""
+  port: ""
+  ssl_mode: ""
+  max_cons:
+  min_cons:
+  max_con_lifetime: ""
+
 # gRPC
 grpc:
   port: ""
