--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,42 @@
 version: "3.9"
 
 services:
+  db:
+    image: postgres:16
+    environment:
+      POSTGRES_USER: user_service_user
+      POSTGRES_PASSWORD: 0RRjknEbFIM9OXg1
+      POSTGRES_DB: user_service_db
+    ports:
+      - "5434:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U user_service_user -d user_service_db" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+
   user-service:
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8082:8082"
+      - "8082:8080"
     environment:
       - ENV=production
+      - DB_HOST=db
+      - DB_PORT=5432
+      - DB_USER=user_service_user
+      - DB_PASSWORD=0RRjknEbFIM9OXg1
+      - DB_NAME=user_service_db
     volumes:
       - ./logs:/app/logs
       - ./config/config.yaml:/config/config.yaml
+    depends_on:
+      db:
+        condition: service_healthy
     restart: unless-stopped
+
+volumes:
+  db-data:
